5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1643_1053.log
== TEST (2019-04-03 19:01:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=srt(input("Que desgraça tu e? "))
if (nome==cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    nome=srt(input())
NameError: name 'srt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:01:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=(input("Que desgraça tu e? "))
if (nome==cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:01:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraça tu e? ")
if (nome==cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:02:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome==cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (nome==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:02:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome=cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if (nome=cervo):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:02:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome = cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:03:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if ("nome" = cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if ("nome" = cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:03:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome = cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:08:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome = 'cervo'):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if (nome = 'cervo'):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:15:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome = cervo):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if (nome = cervo):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:16:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome = "cervo"):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- ERROR:
File "XXXX", line 5
    if (nome = "cervo"):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:16:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome == "cervo"):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:16:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome=input("Que desgraca tu e? ")
if (nome == "cervo"):
	print("{} eh patrono do Harry Potter".format(nome))
else:
	print("{} nao eh patrono do Harry Potter".format(nome))
-- EXECUTION TIME:
0.168561
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
